--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 	<header>
     	<h1>Steven Miller</h1>
 </header>
-  
-
-		<p>My name is Steven Miller and this website serves the purpose of furthering the digital extension of myself.</p>
-
-	
+<main>
+	<section>
     <h2>Education & Experience</h2>
-		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham Young University, where I first began programming. I took a computer science course, which introduced me to the world of computer programming. Although I have not yet obtained a college degree, my passion for learning and curiosity has helped me continue learning even though I'm not enrolled in school any longer.Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor. As for professional licenses I held a Master Fire Alarm Technician license in the state of Utah. I hope to one day secure a job in the tech industry. For the time being I will aim to become a professional coder and hence will further my skills in that direction. <p>
-	
-<h2>Languages</h2>
+		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham 
+			Young University, where I first began programming. I took a computer science course, which introduced me to 
+			the world of computer programming. Although I have not yet obtained a college degree, my passion for learning 
+			and curiosity has helped me continue learning even though I'm not enrolled in school any longer.Ive held many 
+			jobs such as customer service representative, fire alarm and security technician, and sea food processor. As for 
+			professional licenses I held a Master Fire Alarm Technician license in the state of Utah. I hope to one day secure 
+			a job in the tech industry. For the time being I will aim to become a professional coder and hence will further my 
+			skills in that direction.</p>
+	</section>
+	<section>
+<h2>Competencies</h2>
 <div class="container">
   <div class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></div>
   <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </div>
@@ -28,8 +33,24 @@
 <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++"></div>
 <div class="part"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"alt="git"></div>
 <div class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"alt="react"></div>
-
 </div>
+</section>
+</main>
+
+	<h2>Contact</h2>
+<p class="email">sem2093@gmail.com</p>
+<p class="phone">1-937-474-9664</p>
+
+<h2>Follow</h2>
+		<a href="https://www.twitter.com/@sem2093">
+  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter"style="width: 100px; height: 100px;">
+</a>
+<a href="https://www.instagram.com/@sem209378">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram"style="width: 100px; height: 100px;">
+			</a>
+	<a href="https://m.facebook.com/profile.php?id=100008629298322">
+ <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook"style="width: 100px; height: 100px;">
+	</a>
 
 	<footer>
 		<p>&copy; 2023 Steven Miller. All rights reserved.</p>
