--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </header>
 <main>
 	<section>
-    <h2>Education & Experience</h2>
+    <h2>Education </h2>
 		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham 
 			Young University, where I first began programming. I took a computer science course, which introduced me to 
 			the world of computer programming. Although I have not yet obtained a college degree, my passion for learning 
-			and curiosity has helped me continue learning even though I'm not enrolled in school any longer.Ive held many 
-			jobs such as customer service representative, fire alarm and security technician, and sea food processor. As for 
-			professional licenses I held a Master Fire Alarm Technician license in the state of Utah. I hope to one day secure 
-			a job in the tech industry. For the time being I will aim to become a professional coder and hence will further my 
-			skills in that direction.</p>
+			and curiosity has helped me continue learning even though I'm not enrolled in school any longer. </p>
 	</section>
+	
+	<section>
+	<h2>Experience</h2>
+	<p>Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor.</p>
+	</section>
+	
 	<section>
 <h2>Competencies</h2>
 <div class="container">
