--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     	<h1>Steven Miller</h1>
 </header>
 <main>
+	
 	<section>
-    <h2>Education </h2>
+    <h2>Formal Education </h2>
 		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham 
-			Young University, where I first began programming. I took a computer science course, which introduced me to 
-			the world of computer programming. Although I have not yet obtained a college degree, my passion for learning 
-			and curiosity has helped me continue learning even though I'm not enrolled in school any longer. </p>
+			Young University, where I first began programming in a computer science course.
+			Although I have not yet obtained a college degree, my passion for learning 
+			and curiosity has helped me continue learning even though I'm not enrolled in school any longer.</p>
 	</section>
 	
 	<section>
@@ -39,10 +40,13 @@
 </section>
 </main>
 
+<section>
 	<h2>Contact</h2>
 <p class="email">sem2093@gmail.com</p>
 <p class="phone">1-937-474-9664</p>
+</section>
 
+<section>
 <h2>Follow</h2>
 		<a href="https://www.twitter.com/@sem2093">
   <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter"style="width: 100px; height: 100px;">
@@ -53,6 +57,7 @@
 	<a href="https://m.facebook.com/profile.php?id=100008629298322">
  <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook"style="width: 100px; height: 100px;">
 	</a>
+	</section>
 
 	<footer>
 		<p>&copy; 2023 Steven Miller. All rights reserved.</p>
