--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 </main>
 
 <section>
+	<h2> Certificates </h2>
+<iframe src="HTML certification .pdf" width="100%" height="600px"></iframe>
+</section>
+<section>
 	<h2>Contact</h2>
 <p class="email">sem2093@gmail.com</p>
 <p class="phone">1-937-474-9664</p>
