--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 	<h2> Certificates </h2>
-<iframe src="HTML certification .pdf" width="auto" height="auto"></iframe>
+<iframe src="HTML certification .pdf" width="70%" height="850px"></iframe>
 
 <section>
 	<h2>Contact</h2>
