--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     	<h1>Steven Miller</h1>
 </header>
 <main>
-	
+	<section>
+	<h2>About me</h2>
+	<p> Hi, my name is Steven Miller. I am a self-learner, curious and enthusiastic in learning new things. Curiosity is what makes a person think different.</p>
+	</section>
 	<section>
     <h2>Formal Education </h2>
 		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham 
