--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	<header>
     	<h1>Steven Miller</h1>
 </header>
+<div>
+<img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng">
+</div>
+
+
+
 <main>
 	<section>
 	<h2>About me</h2>
