--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     	<h1>Steven Miller</h1>
 </header>
 <div>
-<img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="400px" height="600px">
+<img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="auto" height="800px">
 </div>
 
 
