--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 <section>
 <h2>Follow</h2>
+<div class="follow">
 		<a href="https://www.twitter.com/@sem2093">
   <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter"style="width: 100px; height: 100px;">
 </a>
@@ -70,6 +71,7 @@
 	<a href="https://m.facebook.com/profile.php?id=100008629298322">
  <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook"style="width: 100px; height: 100px;">
 	</a>
+	</div>
 	</section>
 
 	<footer>
