--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 <div>
 <img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="auto" height="800px">
 </div>
-
-
-
 <main>
 	<section>
 	<h2>About me</h2>
@@ -45,6 +42,8 @@
 <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++"></div>
 <div class="part"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"alt="git"></div>
 <div class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"alt="react"></div>
+<div class="part"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"alt="github"></div>
+
 </div>
 </section>
 </main>
