--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 <section>
 <h2>Follow</h2>
 <div class="follow">
-		<a href="https://www.twitter.com/@sem2093" class="smicon">
-  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter"style="width: 100px; height: 100px;">
+		<a href="https://www.twitter.com/@sem2093">
+  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" class="smicon" alt="Twitter"style="width: 100px; height: 100px;">
 </a>
-<a href="https://www.instagram.com/@sem209378"class="smicon">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram"style="width: 100px; height: 100px;">
+<a href="https://www.instagram.com/@sem209378">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" class="smicon" alt="Instagram"style="width: 100px; height: 100px;">
 			</a>
-	<a href="https://m.facebook.com/profile.php?id=100008629298322" class="smicon"> 
- <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook"style="width: 100px; height: 100px;">
+	<a href="https://m.facebook.com/profile.php?id=100008629298322"> 
+ <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" class="smicon" alt="Facebook"style="width: 100px; height: 100px;">
 	</a>
 	</div>
 	</section>
