--- a/index.html
+++ b/index.html
@@ -4,81 +4,78 @@
 	<title>Home</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
-	<header>
-    	<h1>Steven Miller</h1>
-</header>
-<main>
-<div>
+<body class="a">
+    <header class="b">
+         	<h1 class="c">Steven Miller</h1>
+     </header>
+     <main class="b">
+          <div class= "c">
 <img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="auto" height="800px">
-</div>
+           </div>
 
-	<section>
-	<h2>About me</h2>
-	<p> Hi, my name is Steven Miller. I am a self-learner, curious and enthusiastic in learning new things. Curiosity is what makes a person think different.</p>
+	<section class="c">
+	<h2 class="d"> About me</h2>
+	<p class="d">Hi, my name is Steven Miller. I am a self-learner, curious and enthusiastic in learning new things. Curiosity is what makes a person think different.</p>
 	</section>
-	<section>
-    <h2>Formal Education </h2>
-		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham 
+	<section class="c">
+    <h2 class="d">Formal Education </h2>
+	<p class="d">I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham 
 			Young University, where I first began programming in a computer science course.
 			Although I have not yet obtained a college degree, my passion for learning 
 			and curiosity has helped me continue learning even though I'm not enrolled in school any longer.</p>
 	</section>
 	
-	<section>
-	<h2>Experience</h2>
-	<p>Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor.</p>
+	<section class="c">
+<h2 class="d">Experience</h2>
+	<p class="d">Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor.</p>
 	</section>
 	
-	<section>
-<h2>Competencies</h2>
-<div class="container">
-  <div class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></div>
-  <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </div>
-  <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript"></div>
-   <div class="part"><img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql"></div>
-  <div class="part"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python"></div>
-<div class="part"><img src="https://cdn-icons-png.flaticon.com/512/8297/8297373.png" alt="json"></div>
-<div class="part"><img src="https://static-00.iconduck.com/assets.00/c-sharp-c-icon-456x512-9sej0lrz.png" alt="c#"></div>
-<div class="part"><img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++"></div>
-<div class="part"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"alt="git"></div>
-<div class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"alt="react"></div>
-<div class="part"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"alt="github"></div>
-
-</div>
+	<section class="c">
+<h2 class="d">Competencies</h2>
+  <div class="d"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></div>
+  <div class="d"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </div>
+  <div class="d"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript"></div>
+   <div class="d"><img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql"></div>
+  <div class="d"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python"></div>
+<div class="d"><img src="https://cdn-icons-png.flaticon.com/512/8297/8297373.png" alt="json"></div>
+<div class="d"><img src="https://static-00.iconduck.com/assets.00/c-sharp-c-icon-456x512-9sej0lrz.png" alt="c#"></div>
+<div class="d"><img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++"></div>
+<div class="d"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"alt="git"></div>
+<div class="d"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"alt="react"></div>
+<div class="d"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"alt="github"></div>
 </section>
 
 
-
-	<h2> Certificates </h2>
-<iframe src="HTML certification .pdf" width="63%" height="850px"></iframe>
+<section class="c">
+	<h2 class="d">Certificates</h2>
+<iframe class="d" src="HTML certification .pdf" width="63%" height="850px"></iframe>
+</section>
 
 </main>
-	<footer>
+	<footer class="b">
 
-<section>
-	<h2>Contact</h2>
-<p class="email">sem2093@gmail.com</p>
-<p class="phone">1-937-474-9664</p>
+<section class="c">
+<h2 class="d">Contact</h2>
+<p class="d">sem2093@gmail.com</p>
+<p class="d">1-937-474-9664</p>
 </section>
 
-<section>
-<h2>Follow</h2>
-<div class="follow">
-		<a href="https://www.twitter.com/@sem2093">
-  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" class="smicon" alt="Twitter"style="width: 100px; height: 100px;">
+<section class="c">
+<h2 class="d">Follow</h2>
+		<a href="https://www.twitter.com/@sem2093" class="d">
+  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" class="e" alt="Twitter"style="width: 100px; height: 100px;">
 </a>
-<a href="https://www.instagram.com/@sem209378">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" class="smicon" alt="Instagram"style="width: 100px; height: 100px;">
+<a href="https://www.instagram.com/@sem209378" class="d">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" class="e" alt="Instagram"style="width: 100px; height: 100px;">
 			</a>
-	<a href="https://m.facebook.com/profile.php?id=100008629298322"> 
- <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" class="smicon" alt="Facebook"style="width: 100px; height: 100px;">
+	<a href="https://m.facebook.com/profile.php?id=100008629298322" class="d">
+ <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" class="e" alt="Facebook"style="width: 100px; height: 100px;">
 	</a>
-	</div>
 	</section>
 
-
-		<p>&copy; 2023 Steven Miller. All rights reserved.</p>
+<div class="c">
+		<p class="d">&copy; 2023 Steven Miller. All rights reserved.</p>
+		</div>
 	</footer>
 	<script src="script.js"></script>
 
