--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      </header>
      <main class="b">
           <div class= "c">
-<img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="auto" height="800px">
+<img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="auto" height="800px" class="d">
            </div>
 
 	<section class="c">
