--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 <h2 class="d">Experience</h2>
 	<p class="d">Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor.</p>
 	</section>
+    
+    
 	
-	<section class="c">
-<h2 class="d">Competencies</h2>
+	<section class="comp">
+    <h2 class="d">Competencies</h2>
   <div class="d"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></div>
   <div class="d"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </div>
   <div class="d"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript"></div>
