--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="a">
-    <header class="b">
+    <header class="b" style="border:solid">
          	<h1 class="c">Steven Miller</h1>
      </header>
-     <main class="b">
+     <main class="b" style="border:solid">
           <div class= "c">
 <img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="auto" height="800px" class="d">
            </div>
@@ -54,7 +54,7 @@
 </section>
 
 </main>
-	<footer class="b">
+	<footer class="b" style="border:solid">
 
 <section class="c">
 <h2 class="d">Contact</h2>
