--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
          	<h1 class="c">Steven Miller</h1>
      </header>
      <main class="b" style="border:solid">
-          <div class= "c">
+          <div class= "c" style="border:solid">
 <img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="auto" height="800px" class="d">
            </div>
 
-	<section class="c">
+	<section class="c" style="border:solid">
 	<h2 class="d"> About me</h2>
 	<p class="d">Hi, my name is Steven Miller. I am a self-learner, curious and enthusiastic in learning new things. Curiosity is what makes a person think different.</p>
 	</section>
-	<section class="c">
+	<section class="c" style="border:solid">
     <h2 class="d">Formal Education </h2>
 	<p class="d">I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham 
 			Young University, where I first began programming in a computer science course.
@@ -25,14 +25,14 @@
 			and curiosity has helped me continue learning even though I'm not enrolled in school any longer.</p>
 	</section>
 	
-	<section class="c">
+	<section class="c"style="border:solid">
 <h2 class="d">Experience</h2>
 	<p class="d">Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor.</p>
 	</section>
     
     
 	
-	<section class="comp">
+	<section class="comp"style="border:solid">
     <h2 class="d">Competencies</h2>
   <div class="d"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></div>
   <div class="d"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </div>
@@ -48,7 +48,7 @@
 </section>
 
 
-<section class="c">
+<section class="c"style="border:solid">
 	<h2 class="d">Certificates</h2>
 <iframe class="d" src="HTML certification .pdf" width="63%" height="850px"></iframe>
 </section>
@@ -56,13 +56,13 @@
 </main>
 	<footer class="b" style="border:solid">
 
-<section class="c">
+<section class="c"style="border:solid">
 <h2 class="d">Contact</h2>
 <p class="d">sem2093@gmail.com</p>
 <p class="d">1-937-474-9664</p>
 </section>
 
-<section class="c">
+<section class="c" style="border:solid">
 <h2 class="d">Follow</h2>
 		<a href="https://www.twitter.com/@sem2093" class="d">
   <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" class="e" alt="Twitter"style="width: 100px; height: 100px;">
@@ -75,7 +75,7 @@
 	</a>
 	</section>
 
-<div class="c">
+<div class="c"style="border:solid">
 		<p class="d">&copy; 2023 Steven Miller. All rights reserved.</p>
 		</div>
 	</footer>
