--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <section class="c"style="border:solid">
 	<h2 class="d">Certificates</h2>
 <iframe class="d" src="HTML certification .pdf" width="63%" height="850px"></iframe>
+<img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate">
 </section>
 
 </main>
