--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
 </section>
 
 
-<section class="c"style="border:solid">
+<div class="certificates"style="border:solid">
 	<h2 class="d">Certificates</h2>
 <iframe class="d" src="HTML certification .pdf" width="63%" height="850px"></iframe>
+<a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg">
 <img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="63%" height="850px">
-</section>
+</a> 
+</div>
 
 </main>
 	<footer class="b" style="border:solid">
