--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="a">
-    <header class="b" style="border:solid">
+    <header style="border:solid">
          	<h1 class="c">Steven Miller</h1>
      </header>
-     <main class="b" style="border:solid">
-          <div class= "c" style="border:solid">
-<img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="mypng" width="auto" height="800px" class="d">
+     <main style="border:solid">
+          <div class= "selfportrait" style="border:solid">
+<img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="selfportrait" width="auto" height="800px" class="selfportrait">
            </div>
 
 	<div class="aboutme" style="border:solid">
@@ -57,7 +57,7 @@
 </div>
 
 </main>
-<footer class="b" style="border:solid">
+<footer style="border:solid">
 
 <div class="contact"style="border:solid">
 <h2 class="d">Contact</h2>
