--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body class="a">
     <header style="border:solid">
-         	<h1 class="c">Steven Miller</h1>
+         	<h1 id="h1" class="c"></h1>
      </header>
      <main style="border:solid">
           <div class= "selfportrait" style="border:solid">
@@ -14,12 +14,12 @@
            </div>
 
 	<div class="aboutme" style="border:solid">
-	<h2 class="d"> About me</h2>
+	<h2 id="h2am" class="d"></h2>
 	<p class="d">Hi, my name is Steven Miller. I am a self-learner, curious and enthusiastic in learning new things. Curiosity is what makes a person think different.</p>
 	</div>
     
 	<div class="education" style="border:solid">
-    <h2 class="d"> Education </h2>
+    <h2 id="h2e" class="d"></h2>
 	<p class="d">I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham 
 			Young University, where I first began programming in a computer science course.
 			Although I have not yet obtained a college degree, my passion for learning 
