--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	<div class="experience"style="border:solid">
     <h2 id="h2ex" class="d"></h2>
-	<p class="d">Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor.</p>
+	<p id="pex" class="d"></p>
 	</div>
     
     
@@ -57,13 +57,13 @@
 <footer style="border:solid">
 
 <div class="contact"style="border:solid">
-<h2 class="d">Contact</h2>
+<h2 id="h2con" class="d"></h2>
 <p class="d">sem2093@gmail.com</p>
 <p class="d">1-937-474-9664</p>
 </div>
 
 <div class="follow" style="border:solid">
-<h2 class="d">Follow</h2>
+<h2 id="h2f" class="d"></h2>
 		<a href="https://www.twitter.com/@sem2093" class="d">
   <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" class="e" alt="Twitter"style="width: 100px; height: 100px;">
 </a>
