--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 <div class="contact"style="border:solid">
 <h2 id="h2con" class="d"></h2>
-<p class="d">sem2093@gmail.com</p>
-<p class="d">1-937-474-9664</p>
+<p id="pem"class="d"></p>
+<p id="pp"class="d"></p>
 </div>
 
 <div class="follow" style="border:solid">
@@ -76,7 +76,7 @@
 	</div>
 
 <div class="c"style="border:solid">
-		<p class="d">&copy; 2023 Steven Miller. All rights reserved.</p>
+		<p id="pc"class="d"></p>
 		</div>
 	</footer>
 	<script src="script.js"></script>
