--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<title>Home</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body class="a">
-    <header style="border:solid">
-         	<h1 id="h1" class="c"></h1>
+<body id="body" class="a">
+    <header id=header style="border:solid">
      </header>
      <main style="border:solid">
           <div class= "selfportrait" style="border:solid">
