--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body id="body" class="a">
-    <header id=header style="border:solid">
-     </header>
-     <main style="border:solid">
-          <div class= "selfportrait" style="border:solid">
-<img src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png" alt="selfportrait" width="auto" height="800px" class="selfportrait">
-           </div>
+<header id="header" style="border:solid"></header>
+     <main id="main" style="border:solid">
+          <div id="selfportrait" style="border:solid"></div>
 
 	<div class="aboutme" style="border:solid">
 	<h2 id="h2am" class="d"></h2>
