--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<div class="aboutme" style="border:solid">
 	<h2 id="h2am" class="d"></h2>
-	<p class="d">Hi, my name is Steven Miller. I am a self-learner, curious and enthusiastic in learning new things. Curiosity is what makes a person think different.</p>
+	<p id="pam"class="d"></p>
 	</div>
     
 	<div class="education" style="border:solid">
