--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Home</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body id="body" class="a">
-<header id="header" style="border:solid"></header>
+<body id="body">
+<header id="header" style="border:solid"><h1 id="h1"></h1></header>
      <main id="main" style="border:solid">
           <div id="selfportrait" style="border:solid"></div>
 
