--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body id="body">
-<header id="header" style="border:solid"><h1 id="h1"></h1></header>
+<header id="header" style="border:solid"><h1 id="h1">Steven Miller</h1></header>
      <main id="main" style="border:solid">
           <div id="selfportrait" style="border:solid"></div>
 
