--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html> 
 <head>
 <title>Steven Miller</title>
-<script src="    "></script>
+<script src="script.js"></script>
 </head>
 <body>
 <header>
-<h1>Steven Miller</h1>
+<h1 id="h1"></h1>
 </header>
 <main>
 </main>
