--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 <title>Steven Miller</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <header>
