--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 </div>
 <div id="ce">
 <h2 id="h2ce"></h2>
-<iframe class="d" src="HTML certification .pdf"></iframe>
-<a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg">
+<div><iframe class="d" src="HTML certification .pdf"></iframe></div>
+<div><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg">
 <img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="63%" height="850px">
-</a> 
+</a></div>
 </div>
 
 </main>
