--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 </div>
 <div id="ce">
 <h2 id="h2ce"></h2>
-<div><iframe class="d" src="HTML certification .pdf"></iframe></div>
-<div><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg">
-<img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="63%" height="850px">
+<div><iframe class="d" src="HTML certification .pdf" width="500px" height="800px"></iframe></div>
+<div width="100%" height="850px"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
+<img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px">
 </a></div>
 </div>
 
