--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"alt="react">
 <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"alt="github">
 </div>
-<div id="ce">
+<div id="ce" class="ce">
 <h2 id="h2ce"></h2>
-<div><iframe class="d" src="HTML certification .pdf" width="500px" height="800px"></iframe></div>
+<div><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
 <div width="100%" height="850px"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
-<img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px">
+<img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px" class="ce">
 </a></div>
 </div>
 
