--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 </div>
 <div id="co">
 <h2 id="h2co" class="d"></h2>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html">
-  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> 
-  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript">
-  <img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql">
-<img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python">
-<img src="https://cdn-icons-png.flaticon.com/512/8297/8297373.png" alt="json">
-<img src="https://static-00.iconduck.com/assets.00/c-sharp-c-icon-456x512-9sej0lrz.png" alt="c#">
-<img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++">
-<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"alt="git">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"alt="react">
-<img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"alt="github">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html" class="co">
+  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css" class="co">
+  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript" class="co">
+  <img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql" class="co">
+<img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python" class="co">
+<img src="https://cdn-icons-png.flaticon.com/512/8297/8297373.png" alt="json" class="co">
+<img src="https://static-00.iconduck.com/assets.00/c-sharp-c-icon-456x512-9sej0lrz.png" alt="c#" class="co">
+<img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++" class="co">
+<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"alt="git" class="co">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"alt="react" class="co">
+<img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"alt="github" class="co">
 </div>
 <div id="ce" class="ce">
 <h2 id="h2ce"></h2>
