--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <img src="" alt="sql" class="co"id="sqlco">
 <img src="" alt="python" class="co"id="pythonco">
 <img src="" alt="json" class="co" id="jsonco">
-<img src="" alt="c#" class="co" id="c#co">
+<img src="" alt="c#" class="co" id="csharpco">
 <img src="" alt="c++" class="co" id="c++co">
 <img src=""alt="git" class="co" id="gitco">
 <img src=""alt="react" class="co" id="reactco">
