--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <h1 id="h1"></h1>
 </header>
 <main>
+  
+<img id="selfportrait" src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png">
+  
 <div id="am">
 <h2 id="h2am"><h2>
 <p id="pam"><p>
