--- a/index.html
+++ b/index.html
@@ -67,5 +67,9 @@
 <p id="pc"><p>
 </footer>
 <script src="script.js"></script>
-</body>
+<!--
+<script src="CDN/library"></script>
+ex= <script src"https://teach.gemimo.com/bouncy.js"></script>
+ -->
+</body> 
 </html>
