--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 <img src=""alt="react" class="co" id="reactco">
 <img src=""alt="github" class="co" id="githubco">
 </div>
+	
 <div id="ce" class="ce">
 <h2 id="h2ce"></h2>
 <div><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
+<div><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
 <div width="100%" height="850px"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
 <img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px" class="ce">
 </a></div>
